@@ -1,3 +1,9 @@
+1997-11-28  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* iselect.c (coop_next_runnable_thread,
+	coop_wait_for_runnable_thread): Disable interrupts so that no
+	async is executed before a potential error_revive.
+
 1997-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* Makefile.am: Added iselect.c and iselect.h.
